# icon_color_override

./: MANIFEST.in  hooks.py  package.json  pyproject.toml  setup.py
public/css/: app_color_override.css
public/js/: icon_color_override.js
