[project]
name = "icon_color_override"
version = "0.0.1"
description = "Override ERPNext icon colors to custom color"
authors = [
    { name = "Your Company", email = "your@email.com" }
]
requires-python = ">=3.10"
dependencies = ["frappe>=14.0.0"]

[project.urls]
Home = "https://github.com/Engsawysaad/icon_color_override"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"